<resources>
    <string name="app_name">TicketsApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_already_cust">I am already a customer</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_forgotten_pass">Forgotten password?</string>
    <string name="login_new_customer">New customer</string>
    <string name="login_register">Register</string>
    <string name="login">Login</string>
    <string name="enter_email">Enter your email</string>
    <string name="phone">Phone</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="gender">Gender</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="filters">Filters:</string>
    <string name="type_of_event">Type of event</string>
    <string name="calendar">Calendar</string>
    <string name="concerts">Concerts</string>
    <string name="exhibitions">Exhibitions</string>
    <string name="shows">Shows</string>
    <string name="date_event">Date: </string>
    <string name="tickets_event">Tickets available — </string>
    <string name="price_range_txt">Price range: </string>
    <string name="price_range_event">€%1$.2f - €%2$.2f</string>
    <string name="price_same_event">Price: €%1$.2f</string>
    <string name="price_range">€ %1$.2f</string>
    <string name="buy_tickets">Buy tickets</string>
    <string name="search">Search</string>
    <plurals name="tickets_qty">
        <item quantity="one">%1$d ticket</item>
        <item quantity="other">%1$d tickets</item>
    </plurals>
    <string name="drawer_open">"Navigation drawer is open."</string>
    <string name="drawer_closed">"Navigation drawer is closed."</string>
    <string name="hall_address">Berlin City Hall\nFreudstrasse 69, 10117 Berlin\nTel.: 030 2223344\nFax: 030 2223355\nE-Mail: info@bch.de</string>
    <string name="reserved_for_10min">The tickets shown here have now been reserved for you for 10 minutes.</string>
    <string name="delete_selection">Delete selection</string>
</resources>
