<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.login.view.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_already_cust" />

        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <TextView
            android:layout_margin="6dp"
            android:id="@+id/forgotPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_forgotten_pass"
            android:textAlignment="textEnd"
            android:textStyle="bold"
            android:focusable="true"
            android:clickable="true"/>

        <Button
            android:id="@+id/loginBtn"
            style="@style/app_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_new_customer" />

        <Button
            android:id="@+id/registerBtn"
            style="@style/app_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_register" />


    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressLogBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        />



</FrameLayout>