<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/events_filter"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#EEFFFFFF"
    android:orientation="vertical"
    android:paddingTop="8dp"
    app:behavior_hideable="false"
    app:behavior_peekHeight="32dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">


    <Button
        android:id="@+id/hideFilters"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/filters" />

    <CheckedTextView
        android:id="@+id/eventCategories"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checkMark="@android:drawable/arrow_down_float"
        android:clickable="true"
        android:focusable="true"
        android:paddingEnd="12dp"
        android:text="@string/type_of_event" />

    <LinearLayout
        android:id="@+id/categoriesContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible"
        android:paddingEnd="6dp">

        <CheckedTextView
            android:id="@+id/concertsTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkMark="?android:attr/listChoiceIndicatorMultiple"
            android:gravity="center"
            android:tag="1"
            android:text="@string/concerts" />

        <CheckedTextView
            android:id="@+id/exhibitionsTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkMark="?android:attr/listChoiceIndicatorMultiple"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:tag="2"
            android:text="@string/exhibitions" />



        <CheckedTextView
            android:id="@+id/showsTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkMark="?android:attr/listChoiceIndicatorMultiple"
            android:gravity="center"
            android:tag="3"
            android:text="@string/shows" />
    </LinearLayout>

    <CheckedTextView
        android:id="@+id/showCalender"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checkMark="@android:drawable/arrow_down_float"
        android:clickable="true"
        android:focusable="true"
        android:paddingEnd="12dp"
        android:text="@string/calendar" />

   <com.squareup.timessquare.CalendarPickerView
       android:id="@+id/eventCalendarView"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"/>


</LinearLayout>